Add all recipe pages and index

--- a/recipes/birria-tacos.html
+++ b/recipes/birria-tacos.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Birria Tacos</title>
 </head>
 <body>
     <h1>Birria Tacos Recipe</h1>
     <a href="../index.html">Home</a>
 
-    <img src="../images/Birria-Tacos.jpg" alt="Birria tacos" height="500" width="500">
+    <img src="../images/Birria-Tacos.jpg" alt="Birria tacos" height="400" width="400">
 
-    <h3>Description</h3>
+    <h2>Description</h2>
     <p>Birria is a traditional stew from Jalisco, Mexico, known for its deep, rich flavor.
        It is typically made by slow cooking goat or lamb in a seasoned broth until the 
        meat is tender. The dish is served with a warm consomé and garnished with fresh 
-       cilantro and white onion.Although birria is often associated with tacos today, it 
+       cilantro and white onion. Although birria is often associated with tacos today, it 
        was originally enjoyed as a stew. Its warmth and bold flavor make it especially 
        satisfying on colder days.</p>
     
-    <h3>Ingredients</h3>
-    <p>
+    <h2>Ingredients</h2>
         <ul>
             <li>Dried chiles and/or peppers</li>
             <li>Mexican oregano</li>
             <li>Mexican cinnamon</li>
             <li>Cuts of meat</li>
         </ul>
-    </p>
 
-
-    <h3>Steps</h3>
+    <h2>Steps</h2>
 
     <p><strong>Prepare the birria:</strong></p>
         <ol>
