--- a/recipes/chicken-alfredo.html
+++ b/recipes/chicken-alfredo.html
@@ -9,11 +9,11 @@
     <h1>Chicken Alfredo Recipe</h1>
     <a href="../index.html">Home</a>
 
-    <img src="../images/Chicken-Alfredo.jpg" alt="Chicken Alfredo" height="500" width="500">
+    <img src="../images/Chicken-Alfredo.jpg" alt="Chicken Alfredo" height="400" width="400">
 
     <h2>Description</h2>
     <p>Chicken Alfredo is a classic Italian American pasta dish made with tender chicken, fettuccine noodles, 
-       and a rich, creamy Parmesan sauce. The sauce is smooth and comforting, while the seasoned chicken adds 
+       and a rich, creamy parmesan sauce. The sauce is smooth and comforting, while the seasoned chicken adds 
        flavor and protein. This dish is easy to make at home and perfect for a cozy dinner or a special occasion.</p>
     
     <h2>Ingredients</h2>
@@ -41,7 +41,7 @@
             <li>3/4 teaspoon Italian seasoning</li>
             <li>1/4 teaspoon salt</li>
             <li>1/4 teaspoon pepper</li>
-            <li>2 cups freshly grated Parmesan cheese</li>
+            <li>2 cups freshly grated parmesan cheese</li>
         </ul>
 
     <h2>Steps</h2>
@@ -70,7 +70,7 @@
                     a few tablespoons at a time, to thin it out.)</li>
                 <li>Assemble: Take sauce off the heat and immediately toss with the cooked fettuccine noodles.</li>
                 <li>Divide the pasta among serving bowls and top with a few slices of chicken. Garnish with parsley, 
-                    more Parmesan, and black pepper if desired.</li>
+                    more parmesan, and black pepper if desired.</li>
             </ol>
 </body>
 </html>
