--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/birria-tacos.html">Birria Tacos</a></li>
-    
         <li><a href="recipes/chicken-alfredo.html">Chicken Alfredo</a></li>
+        <li><a href="recipes/brownies.html">Brownies</a></li>
     </ul>
     
 </body>
