Move Home link to bottom of recipe pages

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <h1>Brownies Recipe</h1>
-    <a href="../index.html">Home</a>
 
     <img src="../images/Brownies.jpg" alt="Brownies" height="400" width="400">
 
     <h2>Description</h2>
-    <p></p>
+    <p>These brownies are rich, chocolatey, and chewy with a soft center. They bake in one pan and 
+        come together fast, and the quick cocoa frosting makes them extra fudgy. Great for an easy 
+        dessert or a snack.</p>
     
     <h2>Ingredients</h2>
     <p><strong>For the brownies:</strong></p>
@@ -51,5 +52,7 @@
                     3 tablespoons cocoa, honey, and 1 teaspoon vanilla extract in a bowl. Stir until 
                     smooth. Frost brownies while they are still slightly warm.</li>
             </ol>
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
